--- a/src/main/resources/templates/clientes.html
+++ b/src/main/resources/templates/clientes.html
@@ -12,7 +12,7 @@
     <!-- MDB CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css">
-    <title>Usuarios</title>
+    <title>Clientes</title>
 </head>
 
 <body>
@@ -22,7 +22,6 @@
     <div id="intro">
         <div class="p-70 h-100">
             <div class="container">
-                <!--Search and add button-->
                 <div class="row mb-3">
                     <!--button modal "Nuevo"-->
                     <button type="button" class="btn btn-success col-2" data-mdb-toggle="modal"
@@ -35,46 +34,38 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="modal-label">Agregar Usuario</h5>
+                                    <h5 class="modal-title" id="modal-label">Agregar Cliente</h5>
                                     <button type="button" class="btn-close" data-mdb-dismiss="modal"
                                         aria-label="Cerrar"></button>
                                 </div>
-                                <form class="p-3" action="#" th:action="@{/addUser}" th:object="${userRegister}"
+                                <form class="p-3" action="#" th:action="@{/addClient}" th:object="${clientRegister}"
                                     method="POST">
                                     <div class="modal-body">
                                         <div class="row">
                                             <div class="form-outline mb-4">
-                                                <input type="number" class="form-control" id="user_cedula"
-                                                    name="user_cedula">
-                                                <label class="form-label" for="user_cedula">Cédula</label>
+                                                <input type="number" class="form-control" id="client_cedula"
+                                                    name="client_cedula">
+                                                <label class="form-label" for="client_cedula">Cédula</label>
                                             </div>
                                             <div class="form-outline mb-4">
-                                                <input type="text" class="form-control" id="user_name" name="user_name">
-                                                <label class="form-label" for="user_name">Nombre Completo</label>
+                                                <input type="text" class="form-control" id="client_name"
+                                                    name="client_name">
+                                                <label class="form-label" for="client_name">Nombre Completo</label>
                                             </div>
                                             <div class="form-outline mb-4">
-                                                <input type="email" class="form-control" id="user_email"
-                                                    name="user_email">
-                                                <label class="form-label" for="user_email">Email</label>
+                                                <input type="text" class="form-control" id="client_address"
+                                                    name="client_address">
+                                                <label class="form-label" for="client_address">Dirección</label>
                                             </div>
-                                        </div>
-                                        <div class="row mb-0 mb-md-4">
-                                            <div class="form-outline col-12 mb-4 mb-md-0 col-md">
-                                                <input type="text" class="form-control" id="username" name="username">
-                                                <label class="form-label" for="username">Usuario</label>
+                                            <div class="form-outline col-12 mb-4">
+                                                <input type="text" class="form-control" id="client_tel"
+                                                    name="client_tel">
+                                                <label class="form-label" for="password">Teléfono</label>
                                             </div>
-                                            <div class=" col-12 mb-4 mb-md-0 col-md-3">
-                                                <select class="form-select" aria-label="Select roles" name="roles">
-                                                    <option value="ADMIN">Admin</option>
-                                                    <option value="USER">Usuario</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="row">
                                             <div class="form-outline col-12">
-                                                <input type="password" class="form-control" id="password"
-                                                    name="password">
-                                                <label class="form-label" for="password">Contraseña</label>
+                                                <input type="email" class="form-control" id="client_email"
+                                                    name="client_email">
+                                                <label class="form-label" for="client_email">Email</label>
                                             </div>
                                         </div>
                                     </div>
@@ -89,12 +80,13 @@
                         </div>
                     </div>
                     <!-- End modal "Nuevo"-->
+                    <!-- Search -->
                     <div class="form-outline offset-6 col-4">
                         <input type="text" class="form-control" id="datatable-search">
                         <label class="form-label" for="datatable-search">Buscar</label>
                     </div>
+                    <!-- End Search -->
                 </div>
-                <!--End Search-->
                 <!-- Status Alert-->
                 <div class="row">
                     <div th:if="${session.message}" th:classappends="${session.message}" class="alert alert-success text-center"
@@ -115,30 +107,28 @@
                         <thead class="table-dark text-center">
                             <tr>
                                 <th scope="col">Cédula</th>
-                                <th scope="col">Nombre de Usuario</th>
-                                <th scope="col">Usuario</th>
-                                <th scope="col">Rol</th>
+                                <th scope="col">Nombre del Cliente</th>
                                 <th scope="col">Email</th>
+                                <th scope="col">Teléfono</th>
+                                <th scope="col">Dirección</th>
                                 <th scope="col">Acciones</th>
                             </tr>
                         </thead>
                         <tbody class="text-center">
-                            <tr th:each="usuarios : ${user}">
-                                <td scope="row" th:text="${usuarios.user_cedula}"></td>
-                                <td th:text="${usuarios.user_name}"></td>
-                                <td th:text="${usuarios.username}"></td>
-                                <td th:text="${usuarios.roles}"></td>
-                                <td th:text="${usuarios.user_email}"></td>
+                            <tr th:each="clientes : ${client}">
+                                <td scope="row" th:text="${clientes.client_cedula}"></td>
+                                <td th:text="${clientes.client_name}"></td>
+                                <td th:text="${clientes.client_email}"></td>
+                                <td th:text="${clientes.client_tel}"></td>
+                                <td th:text="${clientes.client_address}"></td>
                                 <td>
                                     <div class="btn-group" role="group" aria-label="crud">
-                                        <a type="button" class="btn btn-warning btn-sm dataUser"
-                                            data-mdb-toggle="modal"
+                                        <a type="button" class="btn btn-warning btn-sm dataClient" data-mdb-toggle="modal"
                                             data-mdb-target="#editarModal">
                                             Editar
                                         </a>
                                         <a type="button" class="btn btn-danger btn-sm"
-                                                th:onclick="deleteUser([[${usuarios.user_cedula}]])"
-                                        >
+                                            th:onclick="deleteClient([[${clientes.client_cedula}]])">
                                             Eliminar
                                         </a>
                                     </div>
@@ -154,66 +144,57 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="editarModalLabel">Editar Usuario</h5>
+                                <h5 class="modal-title" id="editarModalLabel">Editar Cliente</h5>
                                 <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Cencelar">
                                 </button>
                             </div>
-                            <form class="p-3" th:action="@{/updateUser}" th:object = "${user}" method = "POST">
+                            <form class="p-3" action="#" th:action="@{/updateClient}" th:object="${updateClient}"
+                                method="POST">
                                 <div class="modal-body">
                                     <div class="row">
                                         <div class="form-outline mb-4">
-                                            <input type="number" class="form-control" name = "user_cedula" id = "user_cedula_update">
-                                            <label class="form-label" for="user_cedula">Cédula</label>
+                                            <input type="number" class="form-control" id="client_cedula_update"
+                                                name="client_cedula">
+                                            <label class="form-label" for="client_cedula">Cédula</label>
                                         </div>
                                         <div class="form-outline mb-4">
-                                            <input type="text" class="form-control" name = "user_name" id = "user_name_update">
-                                            <label class="form-label" for="user_name">Nombre Completo</label>
+                                            <input type="text" class="form-control" id="client_name_update" name="client_name">
+                                            <label class="form-label" for="client_name">Nombre Completo</label>
                                         </div>
                                         <div class="form-outline mb-4">
-                                            <input type="email" class="form-control" name = "user_email" id = "user_email_update">
-                                            <label class="form-label" for="user_email">Email</label>
+                                            <input type="text" class="form-control" id="client_address_update"
+                                                name="client_address">
+                                            <label class="form-label" for="client_address">Dirección</label>
                                         </div>
-                                    </div>
-                                    <div class="row mb-0 mb-md-4">
-                                        <div class="form-outline col-12 mb-4 mb-md-0 col-md">
-                                            <input type="text" class="form-control" name = "username" id = "username_update">
-                                            <label class="form-label" for="username">Usuario</label>
+                                        <div class="form-outline col-12 mb-4">
+                                            <input type="text" class="form-control" id="client_tel_update" name="client_tel">
+                                            <label class="form-label" for="password">Teléfono</label>
                                         </div>
-                                        <div class=" col-12 mb-4 mb-md-0 col-md-3">
-                                            <select class="form-select" aria-label="Select roles" name = "roles" id = "roles_update">
-                                                <option th:value="ADMIN" th:text = "Admin"></option>
-                                                <option th:value="USER" th:text = "Usuario"></option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="row">
                                         <div class="form-outline col-12">
-                                            <input type="password" class="form-control" name = "password">
-                                            <label class="form-label" for="password">Contraseña</label>
+                                            <input type="email" class="form-control" id="client_email_update"
+                                                name="client_email">
+                                            <label class="form-label" for="client_email">Email</label>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="modal-footer">
                                     <button class="btn btn-color" type="submit">Modificar</button>
                                     <button type="button" class="btn btn-danger" data-mdb-dismiss="modal">
-                                        Cancelar
+                                        Cerrar
                                     </button>
                                 </div>
+                            </form>
                         </div>
-                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    </div>
-    <!-- MDB Script -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
-    <script type="text/javascript" th:src="@{/js/main.js}" src="../static/js/main.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <!-- MDB Script -->
+        <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+        <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
+        <script type="text/javascript" th:src="@{/js/main.js}" src="../static/js/main.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
-
-</html>
