Proveedores sin validación, corrección de los demás

--- a/src/main/resources/templates/clientes.html
+++ b/src/main/resources/templates/clientes.html
@@ -60,7 +60,7 @@
                                             <div class="form-outline col-12 mb-4">
                                                 <input type="text" class="form-control" id="client_tel"
                                                     name="client_tel">
-                                                <label class="form-label" for="password">Teléfono</label>
+                                                <label class="form-label" for="client_tel">Teléfono</label>
                                             </div>
                                             <div class="form-outline col-12">
                                                 <input type="email" class="form-control" id="client_email"
@@ -168,7 +168,7 @@
                                         </div>
                                         <div class="form-outline col-12 mb-4">
                                             <input type="text" class="form-control" id="client_tel_update" name="client_tel">
-                                            <label class="form-label" for="password">Teléfono</label>
+                                            <label class="form-label" for="client_tel">Teléfono</label>
                                         </div>
                                         <div class="form-outline col-12">
                                             <input type="email" class="form-control" id="client_email_update"
@@ -198,3 +198,4 @@
         <script type="text/javascript" th:src="@{/js/main.js}" src="../static/js/main.js"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
+</html>
