--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -23,7 +23,7 @@
                         <a th:href="@{/clientes}" th:class="${activePage == 'clientes'} ? 'nav-link active' : 'nav-link'">Clientes</a>
                     </li>
                     <li class="nav-item me-3 me-lg-1">
-                        <a th:href="@{/}" class="nav-link">Proveedores</a>
+                        <a th:href="@{/proveedores}" th:class="${activePage == 'proveedores'} ? 'nav-link active' : 'nav-link'">Proveedores</a>
                     </li>
                     <li class="nav-item me-3 me-lg-1">
                         <a th:href="@{/}" class="nav-link">Productos</a>
