--- a/src/main/resources/templates/proveedores.html
+++ b/src/main/resources/templates/proveedores.html
@@ -12,7 +12,7 @@
     <!-- MDB CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css">
-    <title>Usuarios</title>
+    <title>Clientes</title>
 </head>
 
 <body>
@@ -22,7 +22,6 @@
     <div id="intro">
         <div class="p-70 h-100">
             <div class="container">
-                <!--Search and add button-->
                 <div class="row mb-3">
                     <!--button modal "Nuevo"-->
                     <button type="button" class="btn btn-success col-2" data-mdb-toggle="modal"
@@ -35,46 +34,38 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="modal-label">Agregar Usuario</h5>
+                                    <h5 class="modal-title" id="modal-label">Agregar Proveedores</h5>
                                     <button type="button" class="btn-close" data-mdb-dismiss="modal"
                                         aria-label="Cerrar"></button>
                                 </div>
-                                <form class="p-3" action="#" th:action="@{/addUser}" th:object="${userRegister}"
+                                <form class="p-3" action="#" th:action="@{/addSupplier}" th:object="${supplier}"
                                     method="POST">
                                     <div class="modal-body">
                                         <div class="row">
                                             <div class="form-outline mb-4">
-                                                <input type="number" class="form-control" id="user_cedula"
-                                                    name="user_cedula">
-                                                <label class="form-label" for="user_cedula">Cédula</label>
+                                                <input type="number" class="form-control" id="supplier_nit"
+                                                    name="supplier_nit">
+                                                <label class="form-label" for="supplier_nit">NIT</label>
                                             </div>
                                             <div class="form-outline mb-4">
-                                                <input type="text" class="form-control" id="user_name" name="user_name">
-                                                <label class="form-label" for="user_name">Nombre Completo</label>
+                                                <input type="text" class="form-control" id="supplier_name"
+                                                    name="supplier_name">
+                                                <label class="form-label" for="supplier_name">Nombre Completo</label>
                                             </div>
                                             <div class="form-outline mb-4">
-                                                <input type="email" class="form-control" id="user_email"
-                                                    name="user_email">
-                                                <label class="form-label" for="user_email">Email</label>
+                                                <input type="text" class="form-control" id="supplier_address"
+                                                    name="supplier_address">
+                                                <label class="form-label" for="supplier_address">Dirección</label>
                                             </div>
-                                        </div>
-                                        <div class="row mb-0 mb-md-4">
-                                            <div class="form-outline col-12 mb-4 mb-md-0 col-md">
-                                                <input type="text" class="form-control" id="username" name="username">
-                                                <label class="form-label" for="username">Usuario</label>
+                                            <div class="form-outline col-12 mb-4">
+                                                <input type="text" class="form-control" id="supplier_tel"
+                                                    name="supplier_tel">
+                                                <label class="form-label" for="supplier_tel">Teléfono</label>
                                             </div>
-                                            <div class=" col-12 mb-4 mb-md-0 col-md-3">
-                                                <select class="form-select" aria-label="Select roles" name="roles">
-                                                    <option value="ADMIN">Admin</option>
-                                                    <option value="USER">Usuario</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="row">
                                             <div class="form-outline col-12">
-                                                <input type="password" class="form-control" id="password"
-                                                    name="password">
-                                                <label class="form-label" for="password">Contraseña</label>
+                                                <input type="text" class="form-control" id="supplier_city"
+                                                    name="supplier_city">
+                                                <label class="form-label" for="supplier_city">Ciudad</label>
                                             </div>
                                         </div>
                                     </div>
@@ -89,12 +80,13 @@
                         </div>
                     </div>
                     <!-- End modal "Nuevo"-->
+                    <!-- Search -->
                     <div class="form-outline offset-6 col-4">
                         <input type="text" class="form-control" id="datatable-search">
                         <label class="form-label" for="datatable-search">Buscar</label>
                     </div>
+                    <!-- End Search -->
                 </div>
-                <!--End Search-->
                 <!-- Status Alert-->
                 <div class="row">
                     <div th:if="${session.message}" th:classappends="${session.message}" class="alert alert-success text-center"
@@ -114,31 +106,29 @@
                     <table id="datatable" class="table table-borderless table-striped align-middle">
                         <thead class="table-dark text-center">
                             <tr>
-                                <th scope="col">Cédula</th>
-                                <th scope="col">Nombre de Usuario</th>
-                                <th scope="col">Usuario</th>
-                                <th scope="col">Rol</th>
-                                <th scope="col">Email</th>
+                                <th scope="col">NIT</th>
+                                <th scope="col">Nombre del Proveedor</th>
+                                <th scope="col">Dirección</th>
+                                <th scope="col">Teléfono</th>
+                                <th scope="col">Ciudad</th>
                                 <th scope="col">Acciones</th>
                             </tr>
                         </thead>
                         <tbody class="text-center">
-                            <tr th:each="usuarios : ${user}">
-                                <td scope="row" th:text="${usuarios.user_cedula}"></td>
-                                <td th:text="${usuarios.user_name}"></td>
-                                <td th:text="${usuarios.username}"></td>
-                                <td th:text="${usuarios.roles}"></td>
-                                <td th:text="${usuarios.user_email}"></td>
+                            <tr th:each="proveedores : ${supplier}">
+                                <td scope="row" th:text="${proveedores.supplier_nit}"></td>
+                                <td th:text="${proveedores.supplier_name}"></td>
+                                <td th:text="${proveedores.supplier_address}"></td>
+                                <td th:text="${proveedores.supplier_tel}"></td>
+                                <td th:text="${proveedores.supplier_city}"></td>
                                 <td>
                                     <div class="btn-group" role="group" aria-label="crud">
-                                        <a type="button" class="btn btn-warning btn-sm dataUser"
-                                            data-mdb-toggle="modal"
+                                        <a type="button" class="btn btn-warning btn-sm dataSupplier" data-mdb-toggle="modal"
                                             data-mdb-target="#editarModal">
                                             Editar
                                         </a>
                                         <a type="button" class="btn btn-danger btn-sm"
-                                                th:onclick="deleteUser([[${usuarios.user_cedula}]])"
-                                        >
+                                            th:onclick="deleteSupplier([[${proveedores.supplier_nit}]])">
                                             Eliminar
                                         </a>
                                     </div>
@@ -154,42 +144,38 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="editarModalLabel">Editar Usuario</h5>
+                                <h5 class="modal-title" id="editarModalLabel">Editar Proveedor</h5>
                                 <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Cancelar">
                                 </button>
                             </div>
-                            <form class="p-3" th:action="@{/updateUser}" th:object = "${user}" method = "POST">
+                            <form class="p-3" action="#" th:action="@{/updateSupplier}" th:object="${supplier}"
+                                method="POST">
                                 <div class="modal-body">
                                     <div class="row">
                                         <div class="form-outline mb-4">
-                                            <input type="number" class="form-control" name = "user_cedula" id = "user_cedula_update">
-                                            <label class="form-label" for="user_cedula">Cédula</label>
+                                            <input type="number" class="form-control" id="supplier_nit_update"
+                                                name="supplier_nit">
+                                            <label class="form-label" for="supplier_nit">NIT</label>
                                         </div>
                                         <div class="form-outline mb-4">
-                                            <input type="text" class="form-control" name = "user_name" id = "user_name_update">
-                                            <label class="form-label" for="user_name">Nombre Completo</label>
+                                            <input type="text" class="form-control" id="supplier_name_update"
+                                                name="supplier_name">
+                                            <label class="form-label" for="supplier_name">Nombre Completo</label>
                                         </div>
                                         <div class="form-outline mb-4">
-                                            <input type="email" class="form-control" name = "user_email" id = "user_email_update">
-                                            <label class="form-label" for="user_email">Email</label>
+                                            <input type="text" class="form-control" id="supplier_address_update"
+                                                name="supplier_address">
+                                            <label class="form-label" for="supplier_address">Dirección</label>
                                         </div>
-                                    </div>
-                                    <div class="row mb-0 mb-md-4">
-                                        <div class="form-outline col-12 mb-4 mb-md-0 col-md">
-                                            <input type="text" class="form-control" name = "username" id = "username_update">
-                                            <label class="form-label" for="username">Usuario</label>
+                                        <div class="form-outline col-12 mb-4">
+                                            <input type="text" class="form-control" id="supplier_tel_update"
+                                                name="supplier_tel">
+                                            <label class="form-label" for="supplier_tel">Teléfono</label>
                                         </div>
-                                        <div class=" col-12 mb-4 mb-md-0 col-md-3">
-                                            <select class="form-select" aria-label="Select roles" name = "roles" id = "roles_update">
-                                                <option th:value="ADMIN" th:text = "Admin"></option>
-                                                <option th:value="USER" th:text = "Usuario"></option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="row">
                                         <div class="form-outline col-12">
-                                            <input type="password" class="form-control" name = "password">
-                                            <label class="form-label" for="password">Contraseña</label>
+                                            <input type="text" class="form-control" id="supplier_city_update"
+                                                name="supplier_city">
+                                            <label class="form-label" for="supplier_city">Ciudad</label>
                                         </div>
                                     </div>
                                 </div>
@@ -199,14 +185,12 @@
                                         Cancelar
                                     </button>
                                 </div>
+                            </form>
                         </div>
-                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    </div>
     <!-- MDB Script -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
