--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
 		<!-- CSS -->
-    	<link rel="stylesheet" th:href="@{/static/css/styles.css}" href="./css/styles.css">
+    	<link rel="stylesheet" th:href="@{/css/styles.css}" href="./css/styles.css">
 		<!-- MDB CSS -->
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
 		<title>Iniciar Sesión</title>
@@ -21,15 +21,15 @@
 								<img src="https://1000marcas.net/wp-content/uploads/2019/11/Logo-Nike-1.png" alt="nike" style="width:48px">
 							</div>
 							<h2 class="fw-bold text-center">Iniciar sesión</h2>
-							<!-- 
-							<div th:if="${param.Logout}">
-								<h5 class = "text-center text-success">Sesión Cerrada Correctamente</h5>
+							
+							<div th:if="${param.Logout}" class = "text-center">
+								<p class = "text-center text-success">Sesión Cerrada Correctamente</p>
 							</div>
-							<div th:if="${param.error}">
-								<h5 class = "text-danger text-success">Usuario y Contraseña Incorrectas</h5>
+							<div th:if="${param.error}" class = "text-center">
+								<p class = "text-danger text-success">El usuario o la contraseña son incorrectas o no existe el usuario.</p>
 							</div>
-							 -->
-							<form th:action = "@{/}" method = "post">
+							
+							<form th:action = "@{/login}" method = "post">
 								<div class="form-outline mb-4">
 									<input type="text" class = "form-control" id = "username" name ="username" autofocus>
 									<label class = "form-label"  for="username">Usuario</label>
