--- a/src/main/resources/templates/proveedores.html
+++ b/src/main/resources/templates/proveedores.html
@@ -38,7 +38,7 @@
                                     <button type="button" class="btn-close" data-mdb-dismiss="modal"
                                         aria-label="Cerrar"></button>
                                 </div>
-                                <form class="p-3 needs-validation" action="#" th:action="@{/addSupplier}"
+                                <form class="p-3 needs-validation" th:action="@{/admin/addSupplier}"
                                     th:object="${supplier}" method="POST" novalidate>
                                     <div class="modal-body">
                                         <div class="row">
@@ -173,7 +173,7 @@
                                 <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Cancelar">
                                 </button>
                             </div>
-                            <form class="p-3 needs-validation" th:action="@{/updateSupplier}" th:object="${supplier}"
+                            <form class="p-3 needs-validation" th:action="@{/admin/updateSupplier}" th:object="${supplier}"
                                 method="POST" novalidate>
                                 <div class="modal-body">
                                     <div class="row">
