--- a/src/main/resources/templates/proveedores.html
+++ b/src/main/resources/templates/proveedores.html
@@ -244,6 +244,7 @@
         <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
         <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
         <script type="text/javascript" th:src="@{/js/main.js}" src="../static/js/main.js"></script>
+        <script type="text/javascript" th:src="@{/js/validationForm.js}" src="../static/js/validationForm.js"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
