--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,11 +4,12 @@
 		<meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
+		<link nes="" rel="icon" sizes="192x192" href="https://www.nike.com/android-icon-192x192.png">
 		<!-- CSS -->
     	<link rel="stylesheet" th:href="@{/css/styles.css}" href="./css/styles.css">
 		<!-- MDB CSS -->
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet"/>
-		<title>Iniciar Sesión</title>
+		<title>Tienda Nike | Iniciar Sesión</title>
 	</head>
 	<body id="intro" class = "loginBody">
 			<!-- Login Body -->
